--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "10x-astro-starter",
+  "name": "10x-cards",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -30,6 +30,8 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
     "@typescript-eslint/eslint-plugin": "8.28.0",
@@ -50,10 +52,11 @@
     "typescript-eslint": "8.28.0"
   },
   "lint-staged": {
-    "*.{ts,tsx,astro}": [
-      "eslint --fix"
+    "*.{js,jsx,ts,tsx,astro}": [
+      "eslint --fix",
+      "prettier --write"
     ],
-    "*.{json,css,md}": [
+    "*.{json,css,md,html,yml}": [
       "prettier --write"
     ]
   }
